--- a/index.html
+++ b/index.html
@@ -942,19 +942,23 @@
                         <h3 className="text-lg font-bold border-b pb-2">تنظیمات تم</h3>
                         
                         <div className="flex justify-between items-center py-2">
-                            <span className="font-medium">حالت شب (Dark Mode)</span>
-                            <label className="relative inline-flex items-center cursor-pointer">
-                                <input 
-                                    type="checkbox" 
-                                    checked={theme === 'dark'} 
-                                    onChange={() => onThemeChange(theme === 'dark' ? 'light' : 'dark')} 
-                                    className="sr-only peer"
-                                />
-                                {/* FIXED iOS Style Toggle Switch - Check thumb position */}
-                                <div className="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-2 peer-focus:ring-blue-300 dark:bg-gray-700 rounded-full peer peer-checked:after:translate-x-5 peer-checked:after:border-white after:content-[''] after:absolute after:top-1 after:left-1 after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all peer-checked:bg-ios-blue"></div>
-                                <span className="mr-3 text-sm font-medium">{theme === 'dark' ? 'فعال' : 'غیرفعال'}</span>
-                            </label>
-                        </div>
+    <span className="font-medium">حالت شب (Dark Mode)</span>
+    <label className="relative inline-flex items-center cursor-pointer">
+        <input 
+            type="checkbox" 
+            checked={theme === 'dark'} 
+            onChange={() => onThemeChange(theme === 'dark' ? 'light' : 'dark')} 
+            className="sr-only peer"
+        />
+        {/* Track */}
+        <div className="w-11 h-6 bg-gray-200 dark:bg-gray-700 rounded-full peer-focus:ring-2 peer-focus:ring-blue-300 transition-colors duration-200"></div>
+        {/* Thumb */}
+        <span 
+            className={`absolute left-1 top-1 w-4 h-4 bg-white rounded-full shadow transform transition-transform duration-200
+            ${theme === 'dark' ? 'translate-x-5' : 'translate-x-0'}`}
+        ></span>
+    </label>
+</div>
 
                         <div className="flex items-center pt-2 border-t ${COLORS.separator}">
                             <input 
