--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             'ترکیه': { code: 'TRY', symbol: '₺', flag: '🇹🇷', defaultRate: 41.69 },
         };
 
-        const EXPENSE_CATEGORIES = ['هدیه', '🍝غذا', '🚕تاکسی', '🚇مترو', '🏨هتل', '💭سایر🎁'];
+        const EXPENSE_CATEGORIES = ['هدیه', '🍝غذا', '🚕تاکسی', '🚇مترو', '🏨هتل', '💭سایر🎀'];
 
         // Color Palette (iOS Inspired)
         const COLORS = {
@@ -504,7 +504,7 @@
                         <h1 className="text-4xl font-extrabold mb-3 shadow-lg">
                             ✈️ دستیار مالی سفرهــــــای خارجی
                     <p>
-                    نوشته شده با ❤️ توسط محمد صادقی کاجی</p>
+                    نوشته شده با ❤️ <br/> توسط محمد صادقی کاجی</p>
                         </h1>
                         <p className="text-xs mt-10 opacity-70">
                             !! ذخیره محلی در مرورگر شما !!
