--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
     <label className="relative inline-flex items-center cursor-pointer">
         <input 
             type="checkbox" 
-            checked={theme === 'dark'} 
+            checked={theme === 'light'} 
             onChange={() => onThemeChange(theme === 'dark' ? 'light' : 'dark')} 
             className="sr-only peer"
         />
