--- a/index.html
+++ b/index.html
@@ -941,23 +941,31 @@
                     <div className={`${COLORS.secondaryBg} p-4 rounded-xl shadow-md space-y-3 border ${COLORS.separator}`}>
                         <h3 className="text-lg font-bold border-b pb-2">تنظیمات تم</h3>
                         
-                        <div className="flex justify-between items-center py-2">
-    <span className="font-medium">حالت شب (Dark Mode)</span>
-    <label className="relative inline-flex items-center cursor-pointer">
-        <input 
-            type="checkbox" 
-            checked={theme === 'dark'} 
-            onChange={() => onThemeChange(theme === 'dark' ? 'light' : 'dark')} 
-            className="sr-only peer"
-        />
-        {/* Track */}
-        <div className="w-11 h-6 bg-gray-200 dark:bg-gray-700 rounded-full peer-focus:ring-2 peer-focus:ring-blue-300 transition-colors duration-200"></div>
-        {/* Thumb */}
-        <span 
-            className={`absolute left-1 top-1 w-4 h-4 bg-white rounded-full shadow transform transition-transform duration-200
-            ${theme === 'dark' ? 'translate-x-0' : 'translate-x-5'}`}
-        ></span>
-    </label>
+                       <div className="flex justify-between items-center py-2">
+  <span className="font-medium">حالت شب (Dark Mode)</span>
+  <label className="relative inline-flex items-center cursor-pointer">
+    <input
+      type="checkbox"
+      checked={theme === 'dark'}
+      onChange={() => onThemeChange(theme === 'dark' ? 'light' : 'dark')}
+      className="sr-only peer"
+    />
+    {/* Track */}
+    <div
+      className="w-14 h-7 bg-gray-200 peer-checked:bg-green-500 dark:bg-gray-700 rounded-full 
+                 peer-focus:ring-2 peer-focus:ring-green-300 transition-colors duration-300 flex items-center justify-between px-1"
+    >
+      {/* Sun Icon */}
+      <span className="text-yellow-400 text-xs">☀️</span>
+      {/* Moon Icon */}
+      <span className="text-gray-200 text-xs">🌙</span>
+    </div>
+    {/* Thumb */}
+    <span
+      className={`absolute left-1 top-1 w-5 h-5 bg-white rounded-full shadow transform transition-transform duration-300
+        ${theme === 'dark' ? 'translate-x-7' : 'translate-x-0'}`}
+    ></span>
+  </label>
 </div>
 
                         <div className="flex items-center pt-2 border-t ${COLORS.separator}">
