--- a/index.html
+++ b/index.html
@@ -941,31 +941,54 @@
                     <div className={`${COLORS.secondaryBg} p-4 rounded-xl shadow-md space-y-3 border ${COLORS.separator}`}>
                         <h3 className="text-lg font-bold border-b pb-2">تنظیمات تم</h3>
                         
-                       <div className="flex justify-between items-center py-2">
+                      <div className="flex justify-between items-center py-2">
   <span className="font-medium">حالت شب (Dark Mode)</span>
-  <label className="relative inline-flex items-center cursor-pointer">
-    <input
-      type="checkbox"
-      checked={theme === 'dark'}
-      onChange={() => onThemeChange(theme === 'dark' ? 'light' : 'dark')}
-      className="sr-only peer"
-    />
-    {/* Track */}
-    <div
-      className="w-14 h-7 bg-gray-200 peer-checked:bg-green-500 dark:bg-gray-700 rounded-full 
-                 peer-focus:ring-2 peer-focus:ring-green-300 transition-colors duration-300 flex items-center justify-between px-1"
+
+  {/* wrapper with LTR to keep sun on left and moon on right regardless of page RTL */}
+  <div className="flex items-center gap-3" dir="ltr">
+    {/* Sun (روشن) */}
+    <button
+      type="button"
+      onClick={() => onThemeChange('light')}
+      aria-label="روشن"
+      className="text-yellow-400 text-lg focus:outline-none"
     >
-      {/* Sun Icon */}
-      <span className="text-yellow-400 text-xs">☀️</span>
-      {/* Moon Icon */}
-      <span className="text-gray-200 text-xs">🌙</span>
-    </div>
-    {/* Thumb */}
-    <span
-      className={`absolute left-1 top-1 w-5 h-5 bg-white rounded-full shadow transform transition-transform duration-300
-        ${theme === 'dark' ? 'translate-x-7' : 'translate-x-0'}`}
-    ></span>
-  </label>
+      ☀️
+    </button>
+
+    <label className="relative inline-flex items-center cursor-pointer">
+      <input
+        type="checkbox"
+        checked={theme === 'dark'}
+        onChange={() => onThemeChange(theme === 'dark' ? 'light' : 'dark')}
+        className="sr-only peer"
+        aria-label="تغییر حالت شب"
+      />
+
+      {/* Track */}
+      <div
+        className="w-14 h-7 bg-gray-200 rounded-full peer-checked:bg-green-500 
+                   transition-colors duration-300 flex-shrink-0"
+        aria-hidden="true"
+      ></div>
+
+      {/* Thumb: توجه — جهت حرکت برعکس شده */}
+      <span
+        className={`absolute top-1 left-1 w-5 h-5 bg-white rounded-full shadow transform transition-transform duration-300
+          ${theme === 'dark' ? 'translate-x-0' : 'translate-x-7'}`}
+      ></span>
+    </label>
+
+    {/* Moon (تاریک) */}
+    <button
+      type="button"
+      onClick={() => onThemeChange('dark')}
+      aria-label="تاریک"
+      className="text-gray-400 text-lg focus:outline-none"
+    >
+      🌙
+    </button>
+  </div>
 </div>
 
                         <div className="flex items-center pt-2 border-t ${COLORS.separator}">
