--- a/index.html
+++ b/index.html
@@ -941,13 +941,11 @@
                     <div className={`${COLORS.secondaryBg} p-4 rounded-xl shadow-md space-y-3 border ${COLORS.separator}`}>
                         <h3 className="text-lg font-bold border-b pb-2">تنظیمات تم</h3>
                         
-                      <div className="flex justify-between items-center py-2">
+                     <div className="flex justify-between items-center py-2">
   <span className="font-medium">حالت شب (Dark Mode)</span>
 
-  {/* wrapper with LTR to keep sun on left and moon on right regardless of page RTL */}
   <div className="flex items-center gap-3" dir="ltr">
-
-      {/* Moon (تاریک) */}
+    {/* Moon (تاریک) */}
     <button
       type="button"
       onClick={() => onThemeChange('dark')}
@@ -955,29 +953,6 @@
       className="text-gray-400 text-lg focus:outline-none"
     >
       🌙
-    </button>
-
-      {/* Track */}
-      <div
-        className="w-14 h-7 bg-gray-200 rounded-full peer-checked:bg-green-500 
-                   transition-colors duration-300 flex-shrink-0"
-        aria-hidden="true"
-      ></div>
-
-      {/* Thumb: توجه — جهت حرکت برعکس شده */}
-      <span
-        className={`absolute top-1 left-1 w-5 h-5 bg-white rounded-full shadow transform transition-transform duration-300
-          ${theme === 'dark' ? 'translate-x-7' : 'translate-x-0'}`}
-      ></span>
-    </label>
-{/* Sun (روشن) */}
-    <button
-      type="button"
-      onClick={() => onThemeChange('light')}
-      aria-label="روشن"
-      className="text-yellow-400 text-lg focus:outline-none"
-    >
-      ☀️
     </button>
 
     <label className="relative inline-flex items-center cursor-pointer">
@@ -988,7 +963,30 @@
         className="sr-only peer"
         aria-label="تغییر حالت شب"
       />
-    
+
+      {/* Track */}
+      <div
+        className="w-14 h-7 bg-gray-200 rounded-full peer-checked:bg-green-500 
+                   transition-colors duration-300 flex-shrink-0"
+        aria-hidden="true"
+      ></div>
+
+      {/* Thumb: الان دارک = راست، لایت = چپ */}
+      <span
+        className={`absolute top-1 left-1 w-5 h-5 bg-white rounded-full shadow transform transition-transform duration-300
+          ${theme === 'dark' ? 'translate-x-7' : 'translate-x-0'}`}
+      ></span>
+    </label>
+
+    {/* Sun (روشن) */}
+    <button
+      type="button"
+      onClick={() => onThemeChange('light')}
+      aria-label="روشن"
+      className="text-yellow-400 text-lg focus:outline-none"
+    >
+      ☀️
+    </button>
   </div>
 </div>
 
