--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 
         const CURRENCY_MAP = {
             'چین': { code: 'CNY', symbol: '¥', flag: '🇨🇳', defaultRate: 7.1 },
-            'دبی': { code: 'AED', symbol: 'د.إ', flag: '🇦🇪', defaultRate: 3.67 },
+            'دبی': { code: 'AED', symbol: 'AED', flag: '🇦🇪', defaultRate: 3.67 },
             'ترکیه': { code: 'TRY', symbol: '₺', flag: '🇹🇷', defaultRate: 41.69 },
         };
 
-        const EXPENSE_CATEGORIES = ['هدیه', '🍝غذا', '🚕تاکسی', '🚇مترو', '🏨هتل', '💭سایر🎀'];
+        const EXPENSE_CATEGORIES = ['هدیه🎀', '🍝غذا', '🚕تاکسی', '🚇مترو', '🏨هتل', '💭سایر'];
 
         // Color Palette (iOS Inspired)
         const COLORS = {
