--- a/index.html
+++ b/index.html
@@ -494,20 +494,20 @@
 
             return (
                 <div 
-                    className="fixed inset-0 z-50 flex flex-col items-center justify-center transition-opacity duration-4000"
+                    className="fixed inset-0 z-50 flex flex-col items-center justify-center transition-opacity duration-5000"
                     style={{ 
-                        background: 'linear-gradient(135deg, #007AFF 0%, #005BBF 100%)', 
-                        opacity: isVisible ? 1 : 0
+                        background: #020024;
+background: linear-gradient(90deg,rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+                        //background: 'linear-gradient(135deg, #007AFF 0%, #005BBF 100%)', 
+                        //opacity: isVisible ? 1 : 0
                     }}
                 >
                     <div className="text-center text-white p-6 rounded-xl animate-pulse">
                         <h1 className="text-4xl font-extrabold mb-3 shadow-lg">
                             ✈️ دستیار مالی سفرهــــــای خارجی
-                    <p>
-                    نوشته شده با ❤️ <br/> توسط محمد صادقی کاجی</p>
                         </h1>
                         <p className="text-xs mt-10 opacity-70">
-                            !! ذخیره محلی در مرورگر شما !!
+                            !! ذخیره اطلاعات شما در حافظه کش گوشی !!
                         </p>
                     </div>
                 </div>
