--- a/index.html
+++ b/index.html
@@ -496,11 +496,12 @@
                 <div 
                     className="fixed inset-0 z-50 flex flex-col items-center justify-center transition-opacity duration-5000"
                     style={{ 
-                        background: #020024;
-background: linear-gradient(90deg,rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+                    background: "linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%)",
+                        opacity: isVisible ? 1 : 0
+                    }}
+
                         //background: 'linear-gradient(135deg, #007AFF 0%, #005BBF 100%)', 
                         //opacity: isVisible ? 1 : 0
-                    }}
                 >
                     <div className="text-center text-white p-6 rounded-xl animate-pulse">
                         <h1 className="text-4xl font-extrabold mb-3 shadow-lg">
